<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/createButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bt_create" />

    <Button
        android:id="@+id/getBalanceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bt_getBalance" />

    <Button
        android:id="@+id/depositButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bt_deposit" />

    <Button
        android:id="@+id/withdrawButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bt_withdraw" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bt_close" />

    <Button
        android:id="@+id/acTransactionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bt_accountTransaction" />

    <Button
        android:id="@+id/allTransactionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bt_allTransactions" />

    <Button
        android:id="@+id/allAccountsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bt_allAccounts" />

</LinearLayout>
